# blog

./: .env.sample  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
Blog/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
blog_app/: urls.py
blog_app/admin/: __init__.py  comment.py  post.py
blog_app/forms/: comment.py
blog_app/migrations/: 0001_initial.py  0002_comment.py  0003_rename_comment_comment_body_comment_created_on_and_more.py  0004_alter_comment_created_on_alter_comment_email_and_more.py  0005_comment_active.py
blog_app/models/: __init__.py  comment.py  posts.py
blog_app/tasks/: email_tasks.py
blog_app/tests/: test_something.py
blog_app/views/: __init__.py  post.py
nginx/: Dockerfile  nginx.conf
templates/blog_app/: base.html  index.html  post_detail.html  side_bar.html
