[project]
name = "blog"
version = "0.1.0"
description = ""
authors = [
    {name = "profMsaif",email = "profmsaif@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=5.2,<6.0)",
    "starlette (>=0.46.2,<0.47.0)"
]

[tool.poetry]
packages = [{include = "blog", from = "src"}]


[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
